assets/scss/components/_footer.scss
.footer {
  background: #1b2031;
  position: relative;
  margin-top: 150px;

  .footer-logo {
    div {
      margin-bottom: 22px;
    }
    img {
      margin-top: -10px;
      
      @include desktop {
        margin-top: 0;
      }
    }
  }

  &-quickbooks {
    img {
      width: 40%;
      margin-bottom: 40px;

      @include mobile {
        zoom: 0.55;
      }

      @include mobile-s {
        zoom: 0.25;
      }
    }
  }

  &-background-shape {
    position: absolute;
    width: 100%;
    top: 0;
    left: 0;

    svg {
      height: 100%;
      width: 100%;

      path {
        fill: $white;
      }
    }

    @include mobile {
      display: none;
    }
  }

  &-cta {
    background: $primary;
    padding: 100px 80px;
    border-radius: 20px;
    display: flex;
    align-items: flex-end;
    margin-top: -110px;
    flex-wrap: wrap;
    position: relative;
    overflow: hidden;
    z-index: 5;

    .blob-1 {
      position: absolute;
      z-index: -1;
      transform: rotate(-20deg);
      top: -43%;
      left: 2%;
      animation: move-left-rotate 5s infinite linear;

      svg {
        path {
          fill: #ffffff;
          opacity: 0.07;
        }
      }
    }

    .blob-2 {
      position: absolute;
      z-index: -1;
      transform: rotate(80deg);
      top: 12%;
      right: -9%;
      width: 235px;
      height: 208px;
      animation: move-top 3s infinite linear;

      svg {
        height: 100%;
        width: 100%;

        path {
          fill: #ffffff;
          opacity: 0.07;
        }
      }
    }

    @include desktop {
      padding: 70px 40px;
    }

    &-content {
      width: 60%;

      @include desktop {
        width: 100%;
        text-align: center;
        margin-bottom: 20px;
      }

      span {
        font-size: 20px;
        display: block;
        line-height: 1;
        margin: 0 0 20px 40px;
        position: relative;

        &::before {
          position: absolute;
          content: "";
          height: 2px;
          width: 20px;
          left: -40px;
          top: 50%;
          transform: translateY(-50%);
          background: $body-color;
        }

        @include desktop {
          display: none;

          &::before {
            display: none;
          }
        }
      }
    }

    &-action {
      width: 40%;

      @include desktop {
        width: 100%;
        text-align: center;
      }

      a {
        float: right;

        @include desktop {
          float: none;
        }
      }
    }
  }

  &-widget {
    padding: 100px 0 50px 0;
    text-align: center;

    @include desktop {
      text-align: center;
      padding: 50px 0 0 0;
    }
  }

  &-socials {
    i {
      font-size: 2.0em;
    }
  }

  &-footer {
    padding: 20px 0;
    border-top: 1px solid rgba(255, 255, 255, 0.2);

    @include desktop {
      text-align: center;
    }
  }
}

